--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Custom elements</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css" />
 </head>
 
